# pocketpass-release

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  setup_mii_creator.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/miicreator/: index.html  mii-viewer.html  test-render.html
app/src/main/assets/models/: plaza_gate.glb  plaza_house_blue.glb  plaza_house_green.glb  plaza_house_red.glb  plaza_house_yellow.glb  plaza_tree.glb
app/src/main/assets/models/animations/: cursor_cursor_loop.glb  cursor_cursor_loop_icon.glb  cursor_cursor_loop_medium.glb  cursor_cursor_loop_wide.glb  mii_hand_already_end.glb  mii_hand_already_loop.glb  mii_hand_already_start.glb  mii_hand_angry.glb  mii_hand_angry_end.glb  mii_hand_angry_start.glb  mii_hand_appeal.glb  mii_hand_aseru.glb  mii_hand_aseru_end.glb  mii_hand_aseru_start.glb  mii_hand_caution.glb  mii_hand_clasp_end.glb  mii_hand_clasp_end_n.glb  mii_hand_clasp_loop.glb  mii_hand_clasp_loop_n.glb  mii_hand_clasp_start.glb  mii_hand_clasp_start_n.glb  mii_hand_demo_happy01a.glb  mii_hand_flounder.glb  mii_hand_flounder2.glb  mii_hand_gamein.glb  mii_hand_gameout.glb  mii_hand_greeting.glb  mii_hand_gutzer_end.glb  mii_hand_gutzer_start.glb  mii_hand_handwaving.glb  mii_hand_happy.glb  mii_hand_happy01.glb  mii_hand_happy01_end.glb  mii_hand_happy01_start.glb  mii_hand_happy_end.glb  mii_hand_happy_start.glb  mii_hand_listen.glb  mii_hand_listen_end.glb  mii_hand_listen_start.glb  mii_hand_new_wait.glb  (+148 more)
app/src/main/assets/models/bodies/: female_combined.glb  female_hand_model.glb  female_model.glb  male_combined.glb  male_hand_model.glb  male_model.glb  mii_body_model.glb
app/src/main/assets/models/costumes/: cloth_chief_model.glb  cloth_donkey_model.glb  cloth_foxluigi_model.glb  cloth_horror_model.glb  cloth_kabuto_model.glb  cloth_link_model.glb  cloth_luigi_model.glb  cloth_mario_model.glb  cloth_ninja_model.glb  cloth_pirate_model.glb  cloth_soccer_model.glb  cloth_tanukimario_model.glb  cloth_tengallon_model.glb  cloth_yoshi_model.glb
app/src/main/assets/models/faces/: face_mat.glb  face_mat_park.glb
app/src/main/assets/models/hats/: hat_3ds_model.glb  hat_cake_model.glb  hat_cat_model.glb  hat_crown_model.glb  hat_link_model.glb  hat_luigi_model.glb  hat_mario_model.glb  hat_pirate_model.glb  hat_silkhat_model_01.glb  (+1 more)
app/src/main/cpp/: CMakeLists.txt  native-keys.c
app/src/main/res/drawable/: ic_bingo.xml  ic_launcher.xml  ic_leaderboard.xml  ic_puzzle_swap.xml  ic_shop.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/src/selfhosted/res/xml/: network_security_config.xml
(+106 files in other folders)
